# sprinkle

./: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  sprinkle.conf  sprinkle.py
.github/workflows/: docker-image.yml
deploy/cron.d/: sprinkle-sa-keepalive
docs/: guide.md  sa-keepalive.md  usage.md
libsprinkle/: clfile.py  clsync.py  common.py  config.py  exceptions.py  operation.py  rclone.py  service_accounts.py  smtp_email.py  sprinkle_daemon.py
scripts/: check-sprinkle-sa-keepalive  sprinkle-sa-keepalive
snap/: snapcraft.yaml
tests/: test_generate_rclone_config.py  test_rclone_move_option.py  test_rclone_sa_dir_option.py  test_sa_keepalive.py  test_service_accounts_unittest.py
